// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationSearchForm should match snapshot 1`] = `
<form
  className="w-100"
  onSubmit={[MockFunction]}
>
  <div
    className="input-group flex-nowrap"
  >
    <input
      className="form-control"
      id="locationName"
      name="locationName"
      placeholder="Search"
      required={true}
      type="text"
    />
    <button
      className="input-group-prepend searchButton"
      type="submit"
    >
      <Spin />
    </button>
  </div>
</form>
`;

exports[`LocationSearchForm should match snapshot and have search icon 1`] = `
<form
  className="w-100"
  onSubmit={[MockFunction]}
>
  <div
    className="input-group flex-nowrap"
  >
    <input
      className="form-control"
      id="locationName"
      name="locationName"
      placeholder="Search"
      required={true}
      type="text"
    />
    <button
      className="input-group-prepend searchButton"
      type="submit"
    >
      <span
        className="searchIcon"
      >
        <ForwardRef(SvgSearchIcon) />
      </span>
    </button>
  </div>
</form>
`;
